--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "dependencies": {
     "express": "^4.21.1",
+    "mysql2": "^3.11.4",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "name": "-sequelize-orm",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "amanbanti",
+  "license": "ISC"
 }
