--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "password",
+      "password": null,
       "database": "proshop",
       "host": "localhost",
       "dialect": "mysql"
@@ -9,15 +9,15 @@
     "test": {
       "username": "root",
       "password": null,
-      "database": "database_test",
-      "host": "127.0.0.1",
+      "database": "proshop",
+      "host": "localhost",
       "dialect": "mysql"
     },
     "production": {
       "username": "root",
       "password": null,
-      "database": "database_production",
-      "host": "127.0.0.1",
+      "database": "proshop",
+      "host": "localhost",
       "dialect": "mysql"
     }
   }
